Bug 874507 - Make clip-path, filter, mask and opacity work on <marker> elements. r=longsonr